small change to correct the class for creating whitespace on the page for somewhere for the eyes to rest

--- a/pathfinder_web/client/src/css/default.css
+++ b/pathfinder_web/client/src/css/default.css
@@ -101,3 +101,8 @@ body {
     margin-right: 2%;
     border-radius: 7px 7px 0 0;
 }
+
+.whitespace {
+  width: 50%;
+  background-color: white;
+}
